--- a/proba.ipynb
+++ b/proba.ipynb
@@ -228,7 +228,7 @@
     "def compute_margins(X, scores):\n",
     "    norms = np.linalg.norm(X, axis=1)\n",
     "    max_norm = np.max(norms)\n",
-    "    margins = (scores - (max_norm - norms)) / max_norm\n",
+    "    margins = (scores - (max_norm - norms))\n",
     "    return margins\n",
     "\n",
     "winning_gene = forward_search(X, C)\n",
