--- a/proba.ipynb
+++ b/proba.ipynb
@@ -10,24 +10,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X [[ 0.17792082  1.17138209  0.80976414  1.4001992  -1.44197537  1.81236127\n",
-      "  -1.37434054  0.13901821  0.86217824  0.14698969]\n",
-      " [-0.03588597 -0.70758008 -1.71563934  0.45089211 -0.50578642  0.36398456\n",
-      "  -0.6953512  -1.27082802 -0.76041604  1.06459005]\n",
-      " [-1.23697768  0.62422059  1.12496505 -0.71951683  0.82475303 -0.70221634\n",
-      "   0.91452543  0.77732488 -0.91931364  1.07339804]\n",
-      " [ 1.73858281  0.49176051 -0.34546561 -1.48181224  1.38433342 -0.77722206\n",
-      "   1.32728758 -0.98435264  1.52660473 -1.34533979]\n",
-      " [-0.64363997 -1.57978311  0.12637576  0.35023776 -0.26132466 -0.69690742\n",
-      "  -0.17212127  1.33883756 -0.70905329 -0.93963799]]\n",
-      "y [1 0 1 1 1 1 1 0 0 1]\n"
+      "X [[ 0.91713176 -0.90243893  1.44528202  0.52352804 -1.83636012 -0.26904765\n",
+      "   1.28346913  0.2490139   1.02789573  1.21501068]\n",
+      " [ 0.2025701   1.94689289 -0.14614529  0.47173717  0.42828842  0.24825837\n",
+      "  -0.38479923 -1.48500035 -1.72938369 -1.51412506]\n",
+      " [-1.92477155 -0.20526708 -0.30084902 -1.45804949  0.06126227  0.94735186\n",
+      "  -1.3584403   0.48744529 -0.42778408 -0.6483552 ]\n",
+      " [ 0.61350943 -0.39768265  0.57347027 -0.83406305  1.18995562  0.86699058\n",
+      "  -0.56181615  1.42665031  0.30769682  0.89915257]\n",
+      " [ 0.19156026 -0.44150424 -1.57175798  1.29684732  0.15685381 -1.79355316\n",
+      "   1.02158656 -0.67810916  0.82157523  0.048317  ]]\n",
+      "y [0 1 1 1 0 1 0 1 0 1]\n"
      ]
     }
    ],
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,19 +68,19 @@
      "output_type": "stream",
      "text": [
       "Flipped Expression Matrix:\n",
-      "[[-0.17792082 -1.17138209 -0.80976414 -1.4001992   1.44197537 -1.81236127\n",
-      "   1.37434054 -0.13901821 -0.86217824 -0.14698969]\n",
-      " [ 0.03588597  0.70758008  1.71563934 -0.45089211  0.50578642 -0.36398456\n",
-      "   0.6953512   1.27082802  0.76041604 -1.06459005]\n",
-      " [ 1.23697768 -0.62422059 -1.12496505  0.71951683 -0.82475303  0.70221634\n",
-      "  -0.91452543 -0.77732488  0.91931364 -1.07339804]\n",
-      " [-1.73858281 -0.49176051  0.34546561  1.48181224 -1.38433342  0.77722206\n",
-      "  -1.32728758  0.98435264 -1.52660473  1.34533979]\n",
-      " [ 0.64363997  1.57978311 -0.12637576 -0.35023776  0.26132466  0.69690742\n",
-      "   0.17212127 -1.33883756  0.70905329  0.93963799]]\n",
+      "[[-0.91713176  0.90243893 -1.44528202 -0.52352804  1.83636012  0.26904765\n",
+      "  -1.28346913 -0.2490139  -1.02789573 -1.21501068]\n",
+      " [-0.2025701  -1.94689289  0.14614529 -0.47173717 -0.42828842 -0.24825837\n",
+      "   0.38479923  1.48500035  1.72938369  1.51412506]\n",
+      " [ 1.92477155  0.20526708  0.30084902  1.45804949 -0.06126227 -0.94735186\n",
+      "   1.3584403  -0.48744529  0.42778408  0.6483552 ]\n",
+      " [-0.61350943  0.39768265 -0.57347027  0.83406305 -1.18995562 -0.86699058\n",
+      "   0.56181615 -1.42665031 -0.30769682 -0.89915257]\n",
+      " [-0.19156026  0.44150424  1.57175798 -1.29684732 -0.15685381  1.79355316\n",
+      "  -1.02158656  0.67810916 -0.82157523 -0.048317  ]]\n",
       "\n",
       "Scores:\n",
-      "[-2.97233483 -2.30126502 -2.38344464 -3.36925953 -2.10967101]\n"
+      "[-2.92128266 -2.9578929  -2.59044557 -2.14213225 -2.63146691]\n"
      ]
     }
    ],
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -127,11 +127,11 @@
      "output_type": "stream",
      "text": [
       "Initial Cluster Mean:\n",
-      "[-0.64363997 -1.57978311  0.12637576  0.35023776 -0.26132466 -0.69690742\n",
-      " -0.17212127  1.33883756 -0.70905329 -0.93963799]\n",
+      "[ 0.61350943 -0.39768265  0.57347027 -0.83406305  1.18995562  0.86699058\n",
+      " -0.56181615  1.42665031  0.30769682  0.89915257]\n",
       "\n",
       "Initial Cluster Mean with Given Cluster:\n",
-      "[0.48390733 0.45232286 0.42692797 0.61851177 0.32854953]\n"
+      "[0.54905875 0.54055961 0.49127443 0.63613172 0.48151707]\n"
      ]
     }
    ],
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -192,8 +192,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[6], line 33\u001b[0m\n\u001b[0;32m     30\u001b[0m     margins \u001b[39m=\u001b[39m (scores \u001b[39m-\u001b[39m (max_norm \u001b[39m-\u001b[39m norms)) \u001b[39m/\u001b[39m max_norm\n\u001b[0;32m     31\u001b[0m     \u001b[39mreturn\u001b[39;00m margins\n\u001b[1;32m---> 33\u001b[0m winning_gene \u001b[39m=\u001b[39m forward_search(X, C)\n\u001b[0;32m     34\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mWinning Gene:\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     35\u001b[0m \u001b[39mprint\u001b[39m(winning_gene)\n",
-      "Cell \u001b[1;32mIn[6], line 8\u001b[0m, in \u001b[0;36mforward_search\u001b[1;34m(X, C)\u001b[0m\n\u001b[0;32m      5\u001b[0m scores \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros(p)\n\u001b[0;32m      7\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(p):\n\u001b[1;32m----> 8\u001b[0m     Ci_plus \u001b[39m=\u001b[39m (C \u001b[39m+\u001b[39;49m X[i]) \u001b[39m/\u001b[39m (\u001b[39mlen\u001b[39m(C) \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m)\n\u001b[0;32m      9\u001b[0m     scores[i] \u001b[39m=\u001b[39m compute_score(Ci_plus)\n\u001b[0;32m     11\u001b[0m min_score \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mmin(scores) \n",
+      "Cell \u001b[1;32mIn[5], line 33\u001b[0m\n\u001b[0;32m     30\u001b[0m     margins \u001b[39m=\u001b[39m (scores \u001b[39m-\u001b[39m (max_norm \u001b[39m-\u001b[39m norms))\n\u001b[0;32m     31\u001b[0m     \u001b[39mreturn\u001b[39;00m margins\n\u001b[1;32m---> 33\u001b[0m winning_gene \u001b[39m=\u001b[39m forward_search(X, C)\n\u001b[0;32m     34\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mWinning Gene:\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     35\u001b[0m \u001b[39mprint\u001b[39m(winning_gene)\n",
+      "Cell \u001b[1;32mIn[5], line 8\u001b[0m, in \u001b[0;36mforward_search\u001b[1;34m(X, C)\u001b[0m\n\u001b[0;32m      5\u001b[0m scores \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mzeros(p)\n\u001b[0;32m      7\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m \u001b[39mrange\u001b[39m(p):\n\u001b[1;32m----> 8\u001b[0m     Ci_plus \u001b[39m=\u001b[39m (C \u001b[39m+\u001b[39;49m X[i]) \u001b[39m/\u001b[39m (\u001b[39mlen\u001b[39m(C) \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m)\n\u001b[0;32m      9\u001b[0m     scores[i] \u001b[39m=\u001b[39m compute_score(Ci_plus)\n\u001b[0;32m     11\u001b[0m min_score \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mmin(scores) \n",
       "\u001b[1;31mValueError\u001b[0m: operands could not be broadcast together with shapes (10,5) (10,) "
      ]
     }
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -256,8 +256,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[5], line 19\u001b[0m\n\u001b[0;32m     15\u001b[0m             C \u001b[39m=\u001b[39m (C \u001b[39m+\u001b[39m winning_gene) \u001b[39m/\u001b[39m (\u001b[39mlen\u001b[39m(C) \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m)\n\u001b[0;32m     17\u001b[0m     \u001b[39mreturn\u001b[39;00m C\n\u001b[1;32m---> 19\u001b[0m final_cluster \u001b[39m=\u001b[39m repeat_forward_search(X)\n\u001b[0;32m     20\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mFinal Cluster Expression Profile:\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     21\u001b[0m \u001b[39mprint\u001b[39m(final_cluster)\n",
-      "Cell \u001b[1;32mIn[5], line 9\u001b[0m, in \u001b[0;36mrepeat_forward_search\u001b[1;34m(X)\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[39mwhile\u001b[39;00m accepted:\n\u001b[0;32m      7\u001b[0m     winning_gene \u001b[39m=\u001b[39m forward_search(X, C)\n\u001b[1;32m----> 9\u001b[0m     updated_score \u001b[39m=\u001b[39m compute_score((C \u001b[39m+\u001b[39;49m winning_gene) \u001b[39m/\u001b[39m (\u001b[39mlen\u001b[39m(C) \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m))\n\u001b[0;32m     11\u001b[0m     \u001b[39mif\u001b[39;00m updated_score \u001b[39m>\u001b[39m compute_score(C) \u001b[39mor\u001b[39;00m (\n\u001b[0;32m     12\u001b[0m             updated_score \u001b[39m==\u001b[39m compute_score(C) \u001b[39mand\u001b[39;00m np\u001b[39m.\u001b[39mmin(compute_margins(X, scores)) \u001b[39m<\u001b[39m np\u001b[39m.\u001b[39mmin(compute_margins(X, [compute_score(C)]))):\n\u001b[0;32m     13\u001b[0m         accepted \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n",
+      "Cell \u001b[1;32mIn[6], line 19\u001b[0m\n\u001b[0;32m     15\u001b[0m             C \u001b[39m=\u001b[39m (C \u001b[39m+\u001b[39m winning_gene) \u001b[39m/\u001b[39m (\u001b[39mlen\u001b[39m(C) \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m)\n\u001b[0;32m     17\u001b[0m     \u001b[39mreturn\u001b[39;00m C\n\u001b[1;32m---> 19\u001b[0m final_cluster \u001b[39m=\u001b[39m repeat_forward_search(X)\n\u001b[0;32m     20\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39mFinal Cluster Expression Profile:\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m     21\u001b[0m \u001b[39mprint\u001b[39m(final_cluster)\n",
+      "Cell \u001b[1;32mIn[6], line 9\u001b[0m, in \u001b[0;36mrepeat_forward_search\u001b[1;34m(X)\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[39mwhile\u001b[39;00m accepted:\n\u001b[0;32m      7\u001b[0m     winning_gene \u001b[39m=\u001b[39m forward_search(X, C)\n\u001b[1;32m----> 9\u001b[0m     updated_score \u001b[39m=\u001b[39m compute_score((C \u001b[39m+\u001b[39;49m winning_gene) \u001b[39m/\u001b[39m (\u001b[39mlen\u001b[39m(C) \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m))\n\u001b[0;32m     11\u001b[0m     \u001b[39mif\u001b[39;00m updated_score \u001b[39m>\u001b[39m compute_score(C) \u001b[39mor\u001b[39;00m (\n\u001b[0;32m     12\u001b[0m             updated_score \u001b[39m==\u001b[39m compute_score(C) \u001b[39mand\u001b[39;00m np\u001b[39m.\u001b[39mmin(compute_margins(X, scores)) \u001b[39m<\u001b[39m np\u001b[39m.\u001b[39mmin(compute_margins(X, [compute_score(C)]))):\n\u001b[0;32m     13\u001b[0m         accepted \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n",
       "\u001b[1;31mValueError\u001b[0m: setting an array element with a sequence. The requested array has an inhomogeneous shape after 1 dimensions. The detected shape was (2,) + inhomogeneous part."
      ]
     }
@@ -296,15 +296,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Winning gene (backward search): [0.99197527 0.37211552 0.98458852 0.07418504 0.39711494 0.10028973\n",
-      " 0.45892427 0.52209353 0.64070543 0.27467434]\n"
+      "Winning gene (backward search): [ 0.19156026 -0.44150424 -1.57175798  1.29684732  0.15685381 -1.79355316\n",
+      "  1.02158656 -0.67810916  0.82157523  0.048317  ]\n"
      ]
     }
    ],
