--- a/projet.ipynb
+++ b/projet.ipynb
@@ -73,14 +73,14 @@
     "\n",
     "\n",
     "#Flip the sign\n",
-    "expression = np.random.randn(p, n)\n",
-    "expression = X \n",
+    "\n",
+    "E = X \n",
     "\n",
     "for i in range(0,len(scores)):\n",
     "    if scores[i]>Smax/2:\n",
-    "       expression[i] *= -1\n",
+    "       E[i] *= -1\n",
     "\n",
-    "print(\" l'expression : \" + expression)\n",
+    "print(\" l'expression : \" + E )\n",
     "\n",
     "\n",
     "#new score \n",
